:adhesive_bandage: fix: list's downshift

--- a/css/style.css
+++ b/css/style.css
@@ -10693,7 +10693,6 @@ header h1, header .h1 {
   max-height: 397px;
   position: absolute;
   z-index: 99;
-  top: 100%;
   overflow-y: scroll;
   /* width */
   /* Handle */
