--- a/scss/components/_dropDown.scss
+++ b/scss/components/_dropDown.scss
@@ -3,7 +3,7 @@
 		max-height: 397px;
 		position: absolute;
 		z-index: 99;
-		top: 100%;
+		// top: 100%;
 		overflow-y: scroll;
 
 		/* width */
